--- a/index.html
+++ b/index.html
@@ -5,23 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">   
-    <title>GRECHISHNIKOV LEV</title>
+    <title>Grechishnikov Lev</title>
 </head>
 <body>
-    <header>
+    <div id="rectangle"></div>
+    <header id="header" class="header">
+
         <div class="container">
-            <img src="/img/logo.svg" alt="Logo">
-            <a href="index.html">GRECHISHNIKOV <span>LEV</span></a>
-            <span class="designer">DESIGNER WEB-DEVELOPER</span>
-            <div>            
-                <ul>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">WORK</a></li>
-                    <li><a href="#">CONTACTS</a></li>
+            <div class="nav">
+                <img src="/img/logo.svg" alt="Logo Grechishnikov">
+                <p class="myname">Grechishnikov <span>Lev</span></p>
+                <p class="work">Designer Web-Developer</p>
+                <ul class="menu">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Contacts</a></li>
                 </ul>
+            </div>
+            <hr class="fline">
+            <hr class="sline">
+            <hr class="tline">
+            <div class="photo">
+            <div class="photo-left">
+                <img src="/img/left-img.png" alt="">
+                <h1 class="fun">UX</br>Designer</h1>
+            </div>
+            <div class="photo-right">
+                <img src="/img/right-img.png" alt="">
+                <h1 class="fun">Web</br>Develop</h1>
+            </div>
             </div>
         </div>
     </header>
-    
 </body>
 </html>
