--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>Grechishnikov Lev</title>
 </head>
 <body>
-    <div id="rectangle"></div>
     <header id="header" class="header">
-
+        <div id="rectangle"></div>
         <div class="container">
             <div class="nav">
                 <img src="/img/logo.svg" alt="Logo Grechishnikov">
@@ -30,7 +29,11 @@
                 <img src="/img/left-img.png" alt="">
                 <h1 class="fun">UX</br>Designer</h1>
             </div>
+            <hr class="fline">
+            <hr class="sline">
+            <hr class="tline">
             <div class="photo-right">
+                
                 <img src="/img/right-img.png" alt="">
                 <h1 class="fun">Web</br>Develop</h1>
             </div>
